(von noah) alle endpunkte prototypmäßig ausprogrammiert, es funktionieren noch nicht alle, doch jannik kann programmieren
